--- a/sare_seg/src/main/webapp/WEB-INF/resource/templates/preview.html
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/templates/preview.html
@@ -20,36 +20,36 @@
 
     <div class="row left-align">
         <div class="col s3 ">        
-            <label for="cve_unica_pv">CLEE_EST</label>
+            <label for="id_UE_pv">CLEE_EST</label>
         </div>
         <div class="col">        
-            <span class="vistaprevia" id="cve_unica_pv">  </span>
+            <span class="vistaprevia" id="id_UE_pv">  </span>
         </div>
     </div>
     
     <h6><i class="material-icons">public</i> Ubicaci&oacute;n geogr&aacute;fica</h6>
     <div class="row left-align">
         <div class="col s3">
-            <label for="e03n_pv">Entidad Federativa</label>
+            <label for="e03N_pv">Entidad Federativa</label>
         </div>
         <div class="col s3">
-            <span class="vistaprevia" id="e03n_pv">  </span>
+            <span class="vistaprevia" id="e03N_pv">  </span>
         </div>
         
         <div class="col s3">
-            <label for="e04n_pv">Municipio o Delegaci&oacute;n</label>
+            <label for="e04N_pv">Municipio o Delegaci&oacute;n</label>
         </div>
         <div class="col s3">
-            <span class="vistaprevia" id="e04n_pv">  </span>
+            <span class="vistaprevia" id="e04N_pv">  </span>
         </div>
     </div>
     
     <div class="row left-align">
         <div class="col s3">
-            <label for="e05n_pv">Localidad</label>
+            <label for="e05N_pv">Localidad</label>
         </div>
          <div class="col s3">
-            <span class="vistaprevia" id="e05n_pv">  </span>
+            <span class="vistaprevia" id="e05N_pv">  </span>
         </div>
         <div class="col s3">
             <label for="e06_pv">AGEB</label>
@@ -126,56 +126,24 @@
             <span class="vistaprevia" id="e13_a_pv">  </span>
         </div>
     </div>
-    <!--
-    <fieldset>
-        <legend><i class="material-icons">local_movies</i> Datos vialidad</legend>
-        <div class="pure-g">
-            <div class="pure-u-1-3">
-                <div class="pure-control-group">
-                    <label for="tipo_administracion_pv">Tipo de administración</label>
-                    <span class="vistaprevia" id="tipo_administracion_pv">  </span>
-                </div>
-                <div class="pure-control-group">
-                    <label for="derecho_transito_pv">Derecho de tránsito</label>
-                    <span class="vistaprevia" id="derecho_transito_pv">  </span>
-                </div>
-                 <div class="pure-control-group">
-                    <label for="codigo_carretera_pv">Código de la carretera</label>
-                    <span class="vistaprevia" id="codigo_carretera_pv">  </span>
-                </div>
-                   <div class="pure-control-group">
-                    <label for="tramo_camino_pv">Tramo</label>
-                    <span class="vistaprevia" id="tramo_camino_pv">  </span>
-                </div>
-                 <div class="pure-control-group">
-                    <label for="cadenamiento_pv">Cadenamiento</label>
-                    <span class="vistaprevia" id="cadenamiento_pv">  </span>
-                </div>
-                 <div class="pure-control-group">
-                    <label for="margen_pv">Margen</label>
-                    <span class="vistaprevia" id="margen_pv">  </span>
-                </div>
-            </div>
-        </div>
-    </fieldset>
-    -->
+   
 
 
     <h6><i class="material-icons">nature_people</i> Asentamiento</h6>
     
     <div class="row left-align">
         <div class="col s3">
-            <label for="tipo_e14n_pv">Tipo de asentamiento humano</label>
+            <label for="tipo_E14_pv">Tipo de asentamiento humano</label>
         </div>
         <div class="col s3">
-            <span class="vistaprevia" id="tipo_e14n_pv">  </span>
+            <span class="vistaprevia" id="tipo_E14_pv">  </span>
         </div>
         
         <div class="col s3">
-            <label for="e14_a_pv">CP</label>
+            <label for="e14_A_pv">CP</label>
         </div>
         <div class="col s3">
-            <span class="vistaprevia" id="e14_a_pv">  </span>
+            <span class="vistaprevia" id="e14_A_pv">  </span>
         </div>  
     </div>
         
@@ -198,10 +166,10 @@
         </div>
         
         <div class="col s3">
-            <label for="e10_a_pv">Nombre de vialidad 1</label>
+            <label for="e10_A_pv">Nombre de vialidad 1</label>
         </div>
         <div class="col s3">
-            <span class="vistaprevia" id="e10_a_pv">  </span>
+            <span class="vistaprevia" id="e10_A_pv">  </span>
         </div>
     </div>
     
@@ -214,10 +182,10 @@
         </div>
         
         <div class="col s3">
-            <label for="e10_b_pv">Nombre de vialidad 2</label>
+            <label for="e10_B_pv">Nombre de vialidad 2</label>
         </div>
         <div class="col s3">
-            <span class="vistaprevia" id="e10_b_pv">  </span>
+            <span class="vistaprevia" id="e10_B_pv">  </span>
         </div>
     </div>
     
@@ -230,10 +198,10 @@
         </div>
         
         <div class="col s3">
-            <label for="e10_c_pv">Nombre de calle posterior</label>
+            <label for="e10_C_pv">Nombre de calle posterior</label>
         </div>
         <div class="col s3">
-            <span class="vistaprevia" id="e10_c_pv">  </span>
+            <span class="vistaprevia" id="e10_C_pv">  </span>
         </div>
     </div>
     
@@ -251,17 +219,17 @@
     
     <div class="row left-align">
         <div class="col s3">
-            <label for="e12_pv">E12 Edificio</label>
+            <label for="E12_pv">E12 Edificio</label>
         </div>
          <div class="col s3">
             <span class="vistaprevia" id="e12_pv">  </span>
         </div>
         
         <div class="col s3">
-            <label for="tipo_e19n_pv">Tipo E19</label>
+            <label for="tipo_e19_pv">Tipo E19</label>
         </div>
         <div class="col s3">
-            <span class="vistaprevia" id="tipo_e19n_pv">  </span>
+            <span class="vistaprevia" id="tipo_e19_pv">  </span>
         </div>
     </div>
     
@@ -289,30 +257,5 @@
             <span class="vistaprevia" id="e20_pv">  </span>
         </div>
     </div>
-    <!--<fieldset>
-       <legend><i class="fa fa-lock fa-2x"></i> Claves</legend>
-       <div class="pure-g">
-           <div class="pure-u-1-2">
-               <div class="pure-control-group">
-                   <label for="cod_resdes_pv">C&oacute;digo de resultado</label>
-                   <span class="vistaprevia" id="cod_resdes_pv">  </span>
-               </div>
-           </div>
-           <div class="pure-u-1-2">
-               <div class="pure-control-group">
-                   <label for="cve_unica_duplicada_pv">Clave &uacute;nica duplicada</label>
-                   <span class="vistaprevia" id="cve_unica_duplicada_pv">  </span>
-               </div>
-           </div>
-       </div>
-   </fieldset>
-   <fieldset>
-       <legend><i class="fa fa-comments fa-2x"></i> Descripci&oacute;n de la ubicaci&oacute;n del establecimiento</legend>
-       <textarea rows="4" id="descrubic_pv" name="descrubic" class="pure-u-1" placeholder="" readonly></textarea>
-   </fieldset>
-    <fieldset>
-       <legend><i class="fa fa-commenting fa-2x"></i> Observaciones</legend>
-       <span class="vistaprevia" id="observaciones_pv">  </span>
-   </fieldset>-->
 
 </form>
