--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -30,9 +30,11 @@ body{
   align-items: center;
   transition: .5s;
 }
-.swal2-icon.swal2-info{
+
+/* .swal2-icon.swal2-info{
     left: 2rem;
-}
+} */
+
 .swal2-popup .swal2-header{
     flex-direction: row !important;
 }
@@ -268,10 +270,13 @@ nav ul a {
   grid-template-columns: 100%;
   color: white;
   font-weight: bold;
-  padding: 20px 0;
+  padding: 10px;
   margin-bottom: 10px;
   margin-top: -15px;
-  background: #ff8a65;
+  background: #c62828;
+  border-radius: 5px;
+  box-shadow: 3px 3px 8px rgba(0, 0, 0, .6);
+  font-family: 'lato';
 }
 
 .container-cleelist-Lock .wrap-list-Lock{
@@ -331,6 +336,12 @@ nav ul a {
   border-bottom: .5px solid #2d384a !important;
   -webkit-box-shadow: 0 .5px 0 0 #2d384a !important;
   box-shadow: 0 .5px 0 0 #2d384a !important;
+}
+
+.wrap-input-empty{
+  border: 1px solid #b71c1c !important;
+  background: #ff8a80 !important;
+  color: white;
 }
 
 .pagination{
@@ -897,7 +908,7 @@ textarea.materialize-textarea:focus:not([readonly]) {
 }
 
 .next-wrap img, .previous-wrap img{
-  opacity: .5;
+  opacity: .8;
   transition: .5s;
   width: 30px;
 }
@@ -1089,7 +1100,6 @@ body.swal2-toast-shown .swal2-container.swal2-shown {
     width: 100%
   }
 
-
   .img-user{
     display: flex;
     justify-content: center;
@@ -1101,6 +1111,16 @@ body.swal2-toast-shown .swal2-container.swal2-shown {
 
   .sidenav .user-view{
     text-align: center;
+    height: 155px;
+  }
+
+  .wrap-container-logo-sare-movil{
+    text-align: center;
+    margin-top: 5px;
+  }
+
+  .wrap-container-logo-sare-movil img{
+    width:60%;
   }
 
   .sidenav .user-view .name {
