--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/login.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/login.css
@@ -10,7 +10,9 @@ body{
   display: flex;
   justify-content: center;
   align-items: center;
-  background: url('./../images/fondos/back.jpg');
+  /* background: url('./../images/fondos/back.jpg'); */
+  background: #2d384a;
+  /* background: url('./../images/fondos/light.jpg'); */
   background-size: cover;
   background-position: center center;
   background-repeat: no-repeat;
