--- a/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/reporGeogra_prueba.jrxml
@@ -166,33 +166,33 @@
 
 end ce,cestatal cve_ce,tramo_control,origen,ID_UE,clee_emp,e08,e09,E23A,c154,e03 cve_ent,e04 cve_mun,e05 cve_loc,e06 cve_ageb,
 e07 cve_mza,tipo_e10,e10 nomvial,e11 numext,e11a numextalf,tipo_e14,e14,e12,e19,e20
-from ce2019_seg.vw_punteo_sare where SARE_ST in ('10','20')  $P!{where} and cestatal is not null order by
+from sare_mas2019_act.vw_punteo_sare where SARE_ST in ('10','20')  $P!{where} and cestatal is not null order by
 cestatal,tramo_control,origen,e23a,clee_emp,id_ue,c154]]>
 	</queryString>
-	<field name="CE" class="java.lang.String"/>
-	<field name="CVE_CE" class="java.lang.String"/>
-	<field name="TRAMO_CONTROL" class="java.lang.String"/>
-	<field name="ORIGEN" class="java.math.BigDecimal"/>
-	<field name="ID_UE" class="java.math.BigDecimal"/>
-	<field name="CLEE_EMP" class="java.lang.String"/>
-	<field name="E08" class="java.lang.String"/>
-	<field name="E09" class="java.lang.String"/>
-	<field name="E23A" class="java.lang.String"/>
-	<field name="C154" class="java.lang.String"/>
-	<field name="CVE_ENT" class="java.lang.String"/>
-	<field name="CVE_MUN" class="java.lang.String"/>
-	<field name="CVE_LOC" class="java.lang.String"/>
-	<field name="CVE_AGEB" class="java.lang.String"/>
-	<field name="CVE_MZA" class="java.lang.String"/>
-	<field name="TIPO_E10" class="java.math.BigDecimal"/>
-	<field name="NOMVIAL" class="java.lang.String"/>
-	<field name="NUMEXT" class="java.math.BigDecimal"/>
-	<field name="NUMEXTALF" class="java.lang.String"/>
-	<field name="TIPO_E14" class="java.math.BigDecimal"/>
-	<field name="E14" class="java.lang.String"/>
-	<field name="E12" class="java.lang.String"/>
-	<field name="E19" class="java.lang.String"/>
-	<field name="E20" class="java.lang.String"/>
+	<field name="ce" class="java.lang.String"/>
+	<field name="cve_ce" class="java.lang.String"/>
+	<field name="tramo_control" class="java.lang.String"/>
+	<field name="origen" class="java.lang.Long"/>
+	<field name="id_ue" class="java.lang.Long"/>
+	<field name="clee_emp" class="java.lang.String"/>
+	<field name="e08" class="java.lang.String"/>
+	<field name="e09" class="java.lang.String"/>
+	<field name="e23a" class="java.lang.String"/>
+	<field name="c154" class="java.lang.String"/>
+	<field name="cve_ent" class="java.lang.String"/>
+	<field name="cve_mun" class="java.lang.String"/>
+	<field name="cve_loc" class="java.lang.String"/>
+	<field name="cve_ageb" class="java.lang.String"/>
+	<field name="cve_mza" class="java.lang.String"/>
+	<field name="tipo_e10" class="java.lang.Long"/>
+	<field name="nomvial" class="java.lang.String"/>
+	<field name="numext" class="java.lang.Long"/>
+	<field name="numextalf" class="java.lang.String"/>
+	<field name="tipo_e14" class="java.lang.Long"/>
+	<field name="e14" class="java.lang.String"/>
+	<field name="e12" class="java.lang.String"/>
+	<field name="e19" class="java.lang.String"/>
+	<field name="e20" class="java.lang.String"/>
 	<variable name="variable1" class="java.lang.String" resetType="None">
 		<variableExpression><![CDATA[]]></variableExpression>
 	</variable>
@@ -602,7 +602,7 @@ CONTROL	]]></text>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="6" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{CE}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{ce}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="178" y="0" width="85" height="28" uuid="c4cda812-c29f-4dcd-960b-a977a13f1ea1"/>
@@ -617,7 +617,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4" rightIndent="4" tabStopWidth="45"/>
 				</textElement>
-				<textFieldExpression><![CDATA[" "+$F{E08}+" "]]></textFieldExpression>
+				<textFieldExpression><![CDATA[" "+$F{e08}+" "]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="263" y="0" width="90" height="28" uuid="38cfd10f-37fa-4ecb-92ad-cc9f4d1cc134"/>
@@ -632,7 +632,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4" rightIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{E09}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{e09}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="373" y="0" width="23" height="28" uuid="ed7d2979-1d64-48e3-a12c-dea084fc6410"/>
@@ -647,7 +647,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{C154}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{c154}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="452" y="0" width="20" height="28" uuid="7518531e-a3b0-4ede-ade5-fc51c13f31c1"/>
@@ -662,7 +662,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{CVE_AGEB}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{cve_ageb}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="414" y="0" width="18" height="28" uuid="1fa254bd-6dd3-4fd5-a326-c0a90346b1d2"/>
@@ -677,7 +677,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{CVE_MUN}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{cve_mun}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="100" y="0" width="38" height="28" uuid="4049580e-f867-49e1-84bf-7b08ca074dbf"/>
@@ -691,7 +691,7 @@ CONTROL	]]></text>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="6" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{CLEE_EMP}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{clee_emp}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="353" y="0" width="20" height="28" uuid="0b173181-dbbd-48d3-8e6c-1b8d44e2ab43"/>
@@ -706,7 +706,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{E23A}.toLowerCase()]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{e23a}.toLowerCase()]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="432" y="0" width="20" height="28" uuid="ab05065c-d26a-4502-a6ce-7fb9f0683ca1"/>
@@ -721,7 +721,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{CVE_LOC}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{cve_loc}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="396" y="0" width="18" height="28" uuid="23940c64-0509-4131-b9cd-577cdd57a6b3"/>
@@ -736,7 +736,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{CVE_ENT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{cve_ent}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="472" y="0" width="20" height="28" uuid="98afe845-f1d9-4c71-9778-e945230b302c"/>
@@ -751,7 +751,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{CVE_MZA}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{cve_mza}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="20" y="0" width="47" height="28" uuid="51da3b53-9b6e-476a-92ef-7fc0de332c37"/>
@@ -766,7 +766,7 @@ CONTROL	]]></text>
 					<font fontName="SansSerif" size="6" isBold="false"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{TRAMO_CONTROL}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tramo_control}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="138" y="0" width="40" height="28" uuid="ee5e91c3-ff9a-4585-945a-6e81413b9b22"/>
@@ -780,7 +780,7 @@ CONTROL	]]></text>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="6" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{ID_UE}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{id_ue}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="67" y="0" width="33" height="28" uuid="a5538b80-af77-41f1-b1e6-99684a1bf373"/>
@@ -794,7 +794,7 @@ CONTROL	]]></text>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font fontName="SansSerif" size="6" isBold="false"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{ORIGEN}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{origen}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="492" y="0" width="20" height="28" uuid="be1ebb2c-40b6-477d-8c26-617fd20bea87"/>
@@ -809,7 +809,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{TIPO_E10}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tipo_e10}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="512" y="0" width="60" height="28" uuid="ba6853c0-ac37-4b10-abc0-276fbcaeb26d"/>
@@ -824,7 +824,7 @@ CONTROL	]]></text>
 					<font fontName="Arial" size="5"/>
 					<paragraph leftIndent="4" rightIndent="4" spacingBefore="4" spacingAfter="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{NOMVIAL}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{nomvial}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="572" y="0" width="20" height="28" uuid="b108a6c4-a5fb-4004-9d7b-883050dbc199"/>
@@ -839,7 +839,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{NUMEXT}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{numext}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="592" y="0" width="20" height="28" uuid="f08566d0-ed32-4384-bd60-a80b2fa6d74b"/>
@@ -854,7 +854,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{NUMEXTALF}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{numextalf}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="612" y="0" width="20" height="28" uuid="770f5d8a-8f45-401e-89f0-dea0d85606e8"/>
@@ -869,7 +869,7 @@ CONTROL	]]></text>
 					<font size="6"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{TIPO_E14}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{tipo_e14}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="632" y="0" width="55" height="28" uuid="9a1a853d-5cdb-44a4-8f80-35d670d77587"/>
@@ -884,7 +884,7 @@ CONTROL	]]></text>
 					<font fontName="Arial" size="5"/>
 					<paragraph leftIndent="4" rightIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{E14}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{e14}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="687" y="0" width="30" height="28" uuid="6dae58d2-4d19-4302-b42b-82d810aab142"/>
@@ -899,7 +899,7 @@ CONTROL	]]></text>
 					<font size="5"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{E12}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{e12}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="717" y="0" width="55" height="28" uuid="df927723-6eb0-4143-b415-ccfe458dd3a1"/>
@@ -914,7 +914,7 @@ CONTROL	]]></text>
 					<font size="5"/>
 					<paragraph leftIndent="4" rightIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{E19}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{e19}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement style="table_TD" stretchType="RelativeToTallestObject" x="772" y="0" width="30" height="28" uuid="9a8d6cc9-eecb-41f0-9f35-3e0114c1c91f"/>
@@ -929,7 +929,7 @@ CONTROL	]]></text>
 					<font size="5"/>
 					<paragraph leftIndent="4"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{E20}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{e20}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
