--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -17,12 +17,10 @@ body{
     font-family: cursive;
 }
 .filtros-clases{
-    font-family: monospace  !important;
-    color: #3c415e !important;
+    color: gray !important;
 }
 .label-clases {
-    font-family: cursive !important;
-    color: #3a3a3a !important;
+    color: gray !important;
     
 }
 #btn-top {
