--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -531,11 +531,12 @@ nav ul a {
 
 /* estilos pisados mapa */
 .custom-scaleControl-extent{
-  display: none !important;
+  /* display: none !important; */
 }
 
 .custom-scaleControl-zoomout {
-  top: 26px !important;
+  /* top: 26px !important; */
+  top: 51px !important;
 }
 
 .custom-scaleControl-pos-aditional {
