impresion mapay cambios API
- se puso la impresion del mapa en modo horizontal 
- se ajusto la configuracion del api para que no mostrara las opciones de compratir, imprimir , etc. 
-se cambio la url del mapa base  ortofotos a una funcional

--- a/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
+++ b/sare_seg/src/main/webapp/WEB-INF/resource/css/app.css
@@ -546,11 +546,11 @@ nav ul a {
 
 /* estilos pisados mapa */
 .custom-scaleControl-extent{
-  display: none !important;
+  //display: none !important;
 }
 
 .custom-scaleControl-zoomout {
-  top: 26px !important;
+  //top: 26px !important;
 }
 
 .custom-scaleControl-pos-aditional {
