--- a/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_prueba.jrxml
+++ b/sare_seg/src/main/webapp/WEB-INF/reportes/registroAvancesPunteados_prueba.jrxml
@@ -238,13 +238,13 @@
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="table_TD" mode="Opaque" backcolor="#FCE4D6">
+	<style name="table_TD" mode="Opaque" backcolor="#666666">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 		<conditionalStyle>
 			<conditionExpression><![CDATA[new Boolean($V{REPORT_COUNT}.intValue()%2==0)]]></conditionExpression>
-			<style backcolor="#F4B084"/>
+			<style backcolor="#666666"/>
 		</conditionalStyle>
 	</style>
 	<style name="table_TD_1" mode="Opaque" backcolor="#F4B084">
@@ -254,6 +254,15 @@
 		<conditionalStyle>
 			<conditionExpression><![CDATA[new Boolean($V{REPORT_COUNT}.intValue()%2==1)]]></conditionExpression>
 			<style backcolor="#F4B084"/>
+		</conditionalStyle>
+	</style>
+	<style name="table_TD_2" mode="Opaque" backcolor="#FFFFFF">
+		<box>
+			<pen lineWidth="0.5" lineColor="#000000"/>
+		</box>
+		<conditionalStyle>
+			<conditionExpression><![CDATA[new Boolean($V{REPORT_COUNT}.intValue()%2==0)]]></conditionExpression>
+			<style backcolor="#E6E6E6"/>
 		</conditionalStyle>
 	</style>
 	<subDataset name="01 01C A1 05 06 07 12" uuid="0da90263-0085-4754-b90e-2bbe21c4410e">
@@ -339,7 +348,7 @@ end cestatal, 2 orden,
 $P!{where1}
             GROUP BY cestatal, origen
 
-) dd  order by ce,ORIGEN ]]>
+) dd  order by ce,ORIGEN]]>
 		</queryString>
 		<field name="cestatal" class="java.lang.String"/>
 		<field name="origen" class="java.lang.Long"/>
@@ -475,20 +484,20 @@ $P!{where1}
 		<variableExpression><![CDATA[]]></variableExpression>
 	</variable>
 	<pageHeader>
-		<band height="67" splitType="Stretch">
+		<band height="65" splitType="Stretch">
 			<staticText>
-				<reportElement x="129" y="10" width="315" height="46" uuid="891fa3b9-7ac3-4df4-9a07-43a151b3c91f"/>
+				<reportElement x="130" y="9" width="315" height="27" uuid="891fa3b9-7ac3-4df4-9a07-43a151b3c91f"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="15" isBold="true" isItalic="false"/>
 				</textElement>
 				<text><![CDATA[Reporte de Avance de Registros Punteados]]></text>
 			</staticText>
 			<image>
-				<reportElement x="3" y="19" width="50" height="28" uuid="9b7bfd45-8b1f-4e61-8c7a-e12b9ebb38d3"/>
+				<reportElement x="12" y="15" width="100" height="50" uuid="9b7bfd45-8b1f-4e61-8c7a-e12b9ebb38d3"/>
 				<imageExpression><![CDATA[$P{URL}+"/INEGI.png"]]></imageExpression>
 			</image>
-			<image>
-				<reportElement x="522" y="19" width="50" height="28" uuid="fbd158db-2262-47ed-be03-6d31656338e9"/>
+			<image isUsingCache="false">
+				<reportElement x="468" y="9" width="95" height="45" uuid="fbd158db-2262-47ed-be03-6d31656338e9"/>
 				<imageExpression><![CDATA[$P{URL}+"/Logo_CE.png"]]></imageExpression>
 			</image>
 		</band>
@@ -518,7 +527,7 @@ $P!{where1}
 									<rightPen lineWidth="0.5"/>
 								</box>
 								<textField>
-									<reportElement style="table_TD" mode="Transparent" x="0" y="0" width="102" height="30" backcolor="#FFFFFF" uuid="a186e8f5-8f55-49df-bda8-4e1521c539d2"/>
+									<reportElement style="table_TD" mode="Opaque" x="0" y="0" width="102" height="30" forecolor="#FFFFFF" backcolor="#666666" uuid="a186e8f5-8f55-49df-bda8-4e1521c539d2"/>
 									<box>
 										<topPen lineWidth="0.5"/>
 										<leftPen lineWidth="0.5"/>
@@ -534,7 +543,7 @@ $P!{where1}
 						</jr:groupHeader>
 						<jr:columnHeader height="61" rowSpan="2">
 							<staticText>
-								<reportElement mode="Opaque" x="0" y="0" width="102" height="61" forecolor="#000000" backcolor="#C65911" uuid="c4ead5a8-04cd-4ed8-99b0-e6500c76c26b"/>
+								<reportElement mode="Opaque" x="0" y="0" width="102" height="61" forecolor="#FFFFFF" backcolor="#E47439" uuid="c4ead5a8-04cd-4ed8-99b0-e6500c76c26b"/>
 								<box>
 									<pen lineWidth="0.25" lineColor="#FFFFFF"/>
 									<topPen lineWidth="0.5" lineColor="#003333"/>
@@ -551,7 +560,7 @@ $P!{where1}
 						<jr:columnFooter height="0" rowSpan="1"/>
 						<jr:detailCell style="table_TD" height="25" rowSpan="1">
 							<textField>
-								<reportElement x="0" y="0" width="102" height="25" uuid="d35a70f1-cc3a-4705-850f-ea84049083d3"/>
+								<reportElement style="table_TD_2" x="0" y="0" width="102" height="25" uuid="d35a70f1-cc3a-4705-850f-ea84049083d3"/>
 								<box>
 									<topPen lineWidth="0.5"/>
 									<leftPen lineWidth="0.5"/>
@@ -566,7 +575,7 @@ $P!{where1}
 					<jr:columnGroup width="234" uuid="19a3852d-7a47-478e-a530-e536d57a90e6">
 						<jr:columnHeader height="30" rowSpan="1">
 							<staticText>
-								<reportElement mode="Opaque" x="0" y="0" width="234" height="30" forecolor="#000000" backcolor="#C65911" uuid="421423c5-40b2-475a-829c-5292b6a64cfc"/>
+								<reportElement mode="Opaque" x="0" y="0" width="234" height="30" forecolor="#FFFFFF" backcolor="#E47439" uuid="421423c5-40b2-475a-829c-5292b6a64cfc"/>
 								<box>
 									<pen lineWidth="0.25" lineColor="#FFFFFF"/>
 									<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -590,7 +599,7 @@ $P!{where1}
 										<rightPen lineWidth="0.5"/>
 									</box>
 									<textField evaluationTime="Group" evaluationGroup="group1">
-										<reportElement style="table_TD" mode="Transparent" x="0" y="0" width="118" height="30" backcolor="#FFFFFF" uuid="085a8eba-ce8d-4510-9dc9-8d100f0837e5"/>
+										<reportElement style="table_TD" mode="Opaque" x="0" y="0" width="118" height="30" forecolor="#FFFFFF" backcolor="#666666" uuid="085a8eba-ce8d-4510-9dc9-8d100f0837e5"/>
 										<box>
 											<topPen lineWidth="0.5"/>
 											<leftPen lineWidth="0.5"/>
@@ -606,7 +615,7 @@ $P!{where1}
 							</jr:groupHeader>
 							<jr:columnHeader style="table 8_CH" height="31" rowSpan="1">
 								<staticText>
-									<reportElement mode="Opaque" x="0" y="0" width="118" height="31" forecolor="#000000" backcolor="#C65911" uuid="f892bf13-bad7-4e79-9615-b7a183f31981"/>
+									<reportElement mode="Opaque" x="0" y="0" width="118" height="31" forecolor="#FFFFFF" backcolor="#E47439" uuid="f892bf13-bad7-4e79-9615-b7a183f31981"/>
 									<box>
 										<pen lineWidth="0.25" lineColor="#FFFFFF"/>
 										<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -622,7 +631,7 @@ $P!{where1}
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="25" rowSpan="1">
 								<textField>
-									<reportElement x="0" y="0" width="118" height="25" uuid="f07c2d09-ee60-43d7-bdaf-92c7a9a3348d"/>
+									<reportElement style="table_TD_2" x="0" y="0" width="118" height="25" uuid="f07c2d09-ee60-43d7-bdaf-92c7a9a3348d"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle"/>
 									<textFieldExpression><![CDATA[$F{carga_01}]]></textFieldExpression>
 								</textField>
@@ -632,7 +641,7 @@ $P!{where1}
 							<jr:groupHeader groupName="group1">
 								<jr:cell style="table_TD_1" height="30" rowSpan="1">
 									<textField evaluationTime="Group" evaluationGroup="group1">
-										<reportElement style="table_TD" mode="Transparent" x="0" y="0" width="116" height="30" backcolor="#FFFFFF" uuid="9b581864-5072-4c0a-aad1-54e1642e7c29"/>
+										<reportElement style="table_TD" mode="Opaque" x="0" y="0" width="116" height="30" forecolor="#FFFFFF" backcolor="#666666" uuid="9b581864-5072-4c0a-aad1-54e1642e7c29"/>
 										<box>
 											<topPen lineWidth="0.5"/>
 											<leftPen lineWidth="0.5"/>
@@ -648,7 +657,7 @@ $P!{where1}
 							</jr:groupHeader>
 							<jr:columnHeader style="table 8_CH" height="31" rowSpan="1">
 								<staticText>
-									<reportElement mode="Opaque" x="0" y="0" width="116" height="31" forecolor="#000000" backcolor="#C65911" uuid="ee92ea0c-f72e-40e1-baff-0be396e8f89e"/>
+									<reportElement mode="Opaque" x="0" y="0" width="116" height="31" forecolor="#FFFFFF" backcolor="#E47439" uuid="ee92ea0c-f72e-40e1-baff-0be396e8f89e"/>
 									<box>
 										<pen lineWidth="0.25" lineColor="#FFFFFF"/>
 										<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -664,7 +673,7 @@ $P!{where1}
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="25" rowSpan="1">
 								<textField>
-									<reportElement x="0" y="0" width="116" height="25" uuid="ba0234b5-d0d0-4baf-b4cf-e164ced3b0c4"/>
+									<reportElement style="table_TD_2" x="0" y="0" width="116" height="25" uuid="ba0234b5-d0d0-4baf-b4cf-e164ced3b0c4"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle"/>
 									<textFieldExpression><![CDATA[$F{realizado_01}]]></textFieldExpression>
 								</textField>
@@ -674,7 +683,7 @@ $P!{where1}
 					<jr:columnGroup width="225" uuid="d907e9f1-0e83-4579-861d-891af8510346">
 						<jr:columnHeader height="30" rowSpan="1">
 							<staticText>
-								<reportElement mode="Opaque" x="0" y="0" width="225" height="30" forecolor="#000000" backcolor="#C65911" uuid="0121ffa8-961f-4716-809f-af5e20ac21d6"/>
+								<reportElement mode="Opaque" x="0" y="0" width="225" height="30" forecolor="#FFFFFF" backcolor="#E47439" uuid="0121ffa8-961f-4716-809f-af5e20ac21d6"/>
 								<box>
 									<pen lineWidth="0.25" lineColor="#FFFFFF"/>
 									<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -692,7 +701,7 @@ $P!{where1}
 							<jr:groupHeader groupName="group1">
 								<jr:cell style="table_TD_1" height="30" rowSpan="1">
 									<textField evaluationTime="Group" evaluationGroup="group1">
-										<reportElement style="table_TD" mode="Transparent" x="0" y="0" width="124" height="30" backcolor="#FFFFFF" uuid="48ef8cc0-7b3f-4d04-af1c-7910c90b19ff"/>
+										<reportElement style="table_TD" mode="Opaque" x="0" y="0" width="124" height="30" forecolor="#FFFFFF" backcolor="#666666" uuid="48ef8cc0-7b3f-4d04-af1c-7910c90b19ff"/>
 										<box>
 											<topPen lineWidth="0.5"/>
 											<leftPen lineWidth="0.5"/>
@@ -708,7 +717,7 @@ $P!{where1}
 							</jr:groupHeader>
 							<jr:columnHeader style="table 8_CH" height="31" rowSpan="1">
 								<staticText>
-									<reportElement mode="Opaque" x="0" y="0" width="124" height="31" forecolor="#000000" backcolor="#C65911" uuid="98a16c7e-acfa-4476-95b9-7d43043df235"/>
+									<reportElement mode="Opaque" x="0" y="0" width="124" height="31" forecolor="#FFFFFF" backcolor="#E47439" uuid="98a16c7e-acfa-4476-95b9-7d43043df235"/>
 									<box>
 										<pen lineWidth="0.25" lineColor="#FFFFFF"/>
 										<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -724,7 +733,7 @@ $P!{where1}
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="25" rowSpan="1">
 								<textField>
-									<reportElement x="0" y="0" width="124" height="25" uuid="9ca0d1bb-32ae-4b5d-b8ed-27bc21079662"/>
+									<reportElement style="table_TD_2" x="0" y="0" width="124" height="25" uuid="9ca0d1bb-32ae-4b5d-b8ed-27bc21079662"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle"/>
 									<textFieldExpression><![CDATA[$F{carga_01c}]]></textFieldExpression>
 								</textField>
@@ -734,7 +743,7 @@ $P!{where1}
 							<jr:groupHeader groupName="group1">
 								<jr:cell style="table_TD_1" height="30" rowSpan="1">
 									<textField evaluationTime="Group" evaluationGroup="group1">
-										<reportElement style="table_TD" mode="Transparent" x="0" y="0" width="101" height="30" backcolor="#FFFFFF" uuid="efdd01e8-4fb5-4d43-bbae-a90a2ae5a07e"/>
+										<reportElement style="table_TD" mode="Opaque" x="0" y="0" width="101" height="30" forecolor="#FFFFFF" backcolor="#666666" uuid="efdd01e8-4fb5-4d43-bbae-a90a2ae5a07e"/>
 										<box>
 											<topPen lineWidth="0.5"/>
 											<leftPen lineWidth="0.5"/>
@@ -750,7 +759,7 @@ $P!{where1}
 							</jr:groupHeader>
 							<jr:columnHeader style="table 8_CH" height="31" rowSpan="1">
 								<staticText>
-									<reportElement mode="Opaque" x="0" y="0" width="101" height="31" forecolor="#000000" backcolor="#C65911" uuid="4d5c8e25-d591-4307-a3c1-98f4c1fce4af"/>
+									<reportElement mode="Opaque" x="0" y="0" width="101" height="31" forecolor="#FFFFFF" backcolor="#E47439" uuid="4d5c8e25-d591-4307-a3c1-98f4c1fce4af"/>
 									<box>
 										<pen lineWidth="0.25" lineColor="#FFFFFF"/>
 										<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -766,7 +775,7 @@ $P!{where1}
 							</jr:columnHeader>
 							<jr:detailCell style="table_TD" height="25" rowSpan="1">
 								<textField>
-									<reportElement x="0" y="0" width="101" height="25" uuid="af07c6ce-b844-4fe3-ac0a-427681df23ae"/>
+									<reportElement style="table_TD_2" x="0" y="0" width="101" height="25" uuid="af07c6ce-b844-4fe3-ac0a-427681df23ae"/>
 									<textElement textAlignment="Center" verticalAlignment="Middle"/>
 									<textFieldExpression><![CDATA[$F{realizado_01c}]]></textFieldExpression>
 								</textField>
